Added Comments to html and css file

--- a/Develop/index.html
+++ b/Develop/index.html
@@ -8,6 +8,9 @@
 </head>
 
 <body>
+
+    <!--Main Header-->
+
     <div class="header">
         <h1>Hori<span class="seo">seo</span>n</h1>
         <div>
@@ -25,6 +28,9 @@
         </div>
     </div>
     <div class="hero"></div>
+
+    <!--Link Source Information - Main Pannel - -->
+
     <div class="content">
         <div id="search-engine-optimization" class="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" alt="Search Engine Optimization Image" class="float-left" />
@@ -48,6 +54,9 @@
             </p>
         </div>
     </div>
+
+<!--Benefit Right Pannel-->
+
     <div class="benefits">
         <div class="benefit-lead">
             <h3>Lead Generation</h3>
@@ -71,6 +80,9 @@
             </p>
         </div>
     </div>
+
+<!--Footer-->
+
     <div class="footer">
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
